--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
+    "@mui/material-nextjs": "^6.1.9",
+    "@mui/styled-engine-sc": "^6.1.10",
+    "@reduxjs/toolkit": "^2.4.0",
+    "@tabler/icons-react": "^3.24.0",
+    "dayjs": "^1.11.13",
+    "mui-one-time-password-input": "^3.0.1",
+    "next": "^15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-dom": "^19.0.0-rc-66855b96-20241106",
+    "react-phone-input-2": "^2.15.1",
+    "react-redux": "^9.1.2",
+    "react-select-country-list": "^2.2.3",
+    "react-swipeable-views": "^0.14.0",
+    "react-swiper": "^0.1.5",
+    "redux": "^5.0.1",
+    "sonner": "^1.7.0",
+    "styled-components": "^6.1.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "typescript": "^5"
   }
 }
